<resources>
    <string name="app_name">ROOKIE</string>
    <string name="no_name">No Name</string>
    <string name="no_address">No Address</string>
    <string name="bl_unavailable">Bluetooth is not available</string>
    <string name="bl_available">Bluetooth is available</string>
    <string name="unkDev">unknown device</string>
    <string name="sc">Scan</string>
    <string name="on">Turn on</string>
    <string name="off">Turn Off</string>
    <string name="un">UserName</string>
    <string name="psw">Password</string>
    <string name="passHint">Enter Your Password</string>
    <string name="unHint">Enter Your User Name</string>
    <string name="title">Login to your Device</string>
    <string name="lg">Login</string>
    <string name="authImg">auth_image</string>
    <string name="dev_welcome">Welcome</string>
    <string name="dev_name">Device Name</string>
    <string name="addr">Address</string>
    <string name="add_notes">Add Notes</string>
    <string name="view_notes">View Notes</string>
    <string name="addNoteBtn">Add Note</string>
    <string name="note_details">Note Details</string>
    <string name="add_note">Add Title Here</string>
    <string name="title_demo">Title Demo</string>
    <string name="details_demo">Details Demo</string>
    <string name="sample_note_title">sample note title</string>
    <string name="_22_1_2022">22/1/2022</string>
    <string name="_12_25">12:25</string>
    <string name="availability">availability</string>
    <string name="textview">TextView</string>
    <string name="notes">Notes</string>
    <string name="loading">Loading....</string>
</resources>